# staticlibdemo

./: .gitignore  .gitignore.swp  AUTHORS  CMakeLists.txt  Makefile.am  README  README.cmake  README.md  configure  configure.ac
include/hello/: hello.h
src/: hello.c  uselib  uselib.c
src/.deps/: hello.Po  uselib.Po
